<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/shape_search_1"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginBottom="16dp"
        android:id="@+id/ll1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ll2"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/profile_pic_example" />
        <TextView
            android:layout_marginStart="16dp"
            style="?attr/textAppearanceBody1"
            android:text="@string/client_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="16dp"
        android:id="@+id/ll2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1"
        app:layout_constraintBottom_toBottomOf="@+id/ll3"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_selected"
            style="?attr/textAppearanceCaption"
            android:background="@drawable/shape_search_1"
            android:padding="16dp" />
        <TextView
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_people_selected"
            style="?attr/textAppearanceCaption"
            android:background="@drawable/shape_search_1"
            android:padding="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            style="?attr/textAppearanceSubtitle2"
            android:text="@string/revenue_generated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            style="?attr/textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="00€" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>